fix: minor fix on z-index of about section background

--- a/src/scss/layout/_section.scss
+++ b/src/scss/layout/_section.scss
@@ -37,6 +37,7 @@
             transform: translateX(-50%);
             background-image: linear-gradient(0deg, transparent, #202020);
             clip-path: polygon(0 25%, 100% 0, 100% 100%, 0% 100%);
+            z-index: -1;
         }
     }
     &.-skills {
